# rsoft-latam-agentic-bank-mcp

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
app/: __init__.py  backend_client.py  config.py  free_routes.py  main.py  paid_routes.py
skills/: skill.md
src/rsoft_agentic_bank/: config.py  server.py
src/rsoft_agentic_bank/backend/: __init__.py  blockchain.py  langgraph_flow.py  supabase_client.py
